[gd_scene load_steps=4 format=3 uid="uid://c25twsyjp0yy1"]

[ext_resource type="Script" path="res://Scripts/options_menu.gd" id="1_yqx1b"]
[ext_resource type="Texture2D" uid="uid://orr75x8cq8b" path="res://icon.svg" id="2_q7w0t"]
[ext_resource type="Theme" uid="uid://duemvjths1y6w" path="res://Themes/menu_theme.tres" id="3_ahr2r"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqx1b")

[node name="BackgroundArt" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_q7w0t")
expand_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -118.0
offset_right = -85.0
offset_bottom = -52.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_ahr2r")
text = "Back"

[node name="Options Backing" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 204.0
offset_top = 222.0
offset_right = -204.0
offset_bottom = -222.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.341176)

[node name="MasterVolumeLabel" type="Label" parent="Options Backing"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -722.0
offset_top = -156.0
offset_right = -414.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ahr2r")
text = "Master Volume"
horizontal_alignment = 2

[node name="MasterVolumeSlider" type="HSlider" parent="Options Backing/MasterVolumeLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 382.0
offset_right = 382.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.001

[node name="Info" type="Label" parent="Options Backing/MasterVolumeLabel"]
layout_mode = 0
offset_left = 165.0
offset_top = 47.0
offset_right = 495.0
offset_bottom = 105.0
theme = ExtResource("3_ahr2r")
theme_override_colors/font_color = Color(0.515867, 0.515867, 0.515867, 1)
theme_override_font_sizes/font_size = 22
text = "Modifier for all sound channels"

[node name="MusicVolumeLabel" type="Label" parent="Options Backing"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -722.0
offset_top = -26.0
offset_right = -414.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ahr2r")
text = "Music Volume"
horizontal_alignment = 2

[node name="MusicVolumeSlider" type="HSlider" parent="Options Backing/MusicVolumeLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 382.0
offset_right = 382.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.001

[node name="Info2" type="Label" parent="Options Backing/MusicVolumeLabel/MusicVolumeSlider"]
layout_mode = 0
offset_left = -217.0
offset_top = 52.0
offset_right = 113.0
offset_bottom = 110.0
theme = ExtResource("3_ahr2r")
theme_override_colors/font_color = Color(0.515867, 0.515867, 0.515867, 1)
theme_override_font_sizes/font_size = 22
text = "Modifier for background music"

[node name="SFXVolumeLabel" type="Label" parent="Options Backing"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -722.0
offset_top = 88.0
offset_right = -414.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ahr2r")
text = "SFX Volume"
horizontal_alignment = 2

[node name="SFXVolumeSlider" type="HSlider" parent="Options Backing/SFXVolumeLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 382.0
offset_right = 382.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.001

[node name="Info2" type="Label" parent="Options Backing/SFXVolumeLabel/SFXVolumeSlider"]
layout_mode = 0
offset_left = -217.0
offset_top = 46.0
offset_right = 113.0
offset_bottom = 104.0
theme = ExtResource("3_ahr2r")
theme_override_colors/font_color = Color(0.515867, 0.515867, 0.515867, 1)
theme_override_font_sizes/font_size = 22
text = "Modifier for sound effects"

[node name="MouseSensitivityLabel" type="Label" parent="Options Backing"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = -156.0
offset_right = 344.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ahr2r")
text = "Look Sensitivity"
horizontal_alignment = 2

[node name="LookSensitivitySlider" type="HSlider" parent="Options Backing/MouseSensitivityLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 382.0
offset_right = 382.0
grow_horizontal = 2
grow_vertical = 2
max_value = 0.1
step = 0.001

[node name="Info2" type="Label" parent="Options Backing/MouseSensitivityLabel/LookSensitivitySlider"]
layout_mode = 0
offset_left = -213.0
offset_top = 51.0
offset_right = 117.0
offset_bottom = 109.0
theme = ExtResource("3_ahr2r")
theme_override_colors/font_color = Color(0.515867, 0.515867, 0.515867, 1)
theme_override_font_sizes/font_size = 22
text = "How fast the player can turn"

[node name="FOV Label" type="Label" parent="Options Backing"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = -26.0
offset_right = 344.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ahr2r")
text = "Field of View"
horizontal_alignment = 2

[node name="FOVSlider" type="HSlider" parent="Options Backing/FOV Label"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 382.0
offset_right = 382.0
grow_horizontal = 2
grow_vertical = 2
min_value = 45.0
max_value = 120.0
value = 75.0

[node name="Info" type="Label" parent="Options Backing/FOV Label/FOVSlider"]
layout_mode = 0
offset_left = -213.0
offset_top = 51.0
offset_right = 117.0
offset_bottom = 109.0
theme = ExtResource("3_ahr2r")
theme_override_colors/font_color = Color(0.515867, 0.515867, 0.515867, 1)
theme_override_font_sizes/font_size = 22
text = "How wide the viewing window is"

[node name="Brightness Label" type="Label" parent="Options Backing"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = 88.0
offset_right = 344.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ahr2r")
text = "Brightness"
horizontal_alignment = 2

[node name="BrightnessSlider" type="HSlider" parent="Options Backing/Brightness Label"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 382.0
offset_right = 382.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.7
max_value = 1.3
step = 0.01
value = 1.0

[node name="Info" type="Label" parent="Options Backing/Brightness Label/BrightnessSlider"]
layout_mode = 0
offset_left = -213.0
offset_top = 51.0
offset_right = 117.0
offset_bottom = 109.0
theme = ExtResource("3_ahr2r")
theme_override_colors/font_color = Color(0.515867, 0.515867, 0.515867, 1)
theme_override_font_sizes/font_size = 22
text = "Change the game brightness"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="value_changed" from="Options Backing/MasterVolumeLabel/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="Options Backing/MusicVolumeLabel/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="Options Backing/SFXVolumeLabel/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="Options Backing/MouseSensitivityLabel/LookSensitivitySlider" to="." method="_on_look_sensitivity_slider_value_changed"]
[connection signal="value_changed" from="Options Backing/FOV Label/FOVSlider" to="." method="_on_fov_slider_value_changed"]
[connection signal="value_changed" from="Options Backing/Brightness Label/BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
